--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <!-- You don't want to know what it looked like before.... -->
 
     <style>
+        p{
+            margin: 0px;
+
+        }
         body {
             padding: 1em;
             max-width: 600px;
@@ -18,11 +22,14 @@
         .row {
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
         }
 
         .col {
             display: flex;
             flex-direction: column;
+            flex-wrap: wrap;
+
         }
 
         .col.hcenter {
@@ -37,7 +44,7 @@
             background: #b547f5;
             border: none;
             border-radius: 8px;
-            width: 400px;
+            width: 100px;
             height: 100px;
             margin: 1em;
         }
@@ -61,18 +68,38 @@
 </head>
 
 <body class="col">
-    <ul class="l-none buttons col hcenter">
+    <ul class="l-none buttons row hcenter">
+
         <li><button class="zap-button nosel" data-key="1">Relay one</button></li>
         <li><button class="zap-button nosel" data-key="2">Relay two</button></li>
         <li><button class="zap-button nosel" data-key="3">Relay three</button></li>
         <li><button class="zap-button nosel" data-key="4">Relay four</button></li>
+        <br></br>
+        <li><button class="zap-button nosel" data-key="p1">Pair 1</button></li>
+        <li><button class="zap-button nosel" data-key="p2">Pair 2</button></li>
+        <li><button class="zap-button nosel" data-key="p3">Pair 3</button></li>
+        <li><button class="zap-button nosel" data-key="p4">Pair 4</button></li>
+        <br></br>
+        <li><button class="zap-button nosel" data-key="prog1">Prog 4</button></li>
+
     </ul>
 
     <p id="info1"></p>
     <p id="info2"></p>
     <p id="info3"></p>
     <p id="info4"></p>
+    
+    <p id="infop1"></p>
+    <p id="infop2"></p>
+    <p id="infop3"></p>
+    <p id="infop4"></p>
+
+    <p id="infoprog1"></p>
+
+      
     <p id="debug"></p>
+    <p id="event"></p>
+
 
     <script>
         ////Websocket bs
@@ -86,7 +113,7 @@
         };
 
         socket.onmessage = (event) => {
-            document.getElementById(`info${button.dataset.key}`).innerHTML =
+            document.getElementById(`event`).innerHTML =
                 `[message] Data received from server: ${event.data}`;
         };
 
@@ -110,8 +137,11 @@
         let timers = {};
         let buttons = {};
 
+        // loop through all <button>s and add event listeners to all of them!
+        // use the data-key as the key in the map
         for (const button of document.querySelectorAll("button.zap-button")) {
             buttons[button.dataset.key] = button;
+            // add the even listeners for unclicking
             for (const evt of ["mouseout", "mouseup", "touchend", "touchcancel"]) {
                 button.addEventListener(evt, () => cancel(button));
             }
@@ -127,6 +157,7 @@
                     }
                 }
             });
+            // clicking sends the event and starts the timer to continue sending it(every 100ms)!
             ["onclick", "touchstart", "mousedown"].forEach(evt => button.addEventListener(evt, (e) => {
                 cancel(button);
                 button.classList.add("btn-active");
@@ -137,7 +168,11 @@
         }
 
         function send(button) {
-            socket.send(`1${button.dataset.key}`);
+            var data = JSON.stringify({ "number": 1, "state": 1, "name": button.dataset.key}); 
+            console.log(data);
+
+            socket.send(data); //`1${button.dataset.key}`);
+
             document.getElementById(`info${button.dataset.key}`).innerHTML =
                 `sent for ${button.dataset.key}`;
         }
@@ -149,8 +184,11 @@
                 }
                 return;
             }
+            var data = JSON.stringify({ "number": 1, "state": 1 , "name": btn.dataset.key}); 
+            console.log(data);
+            socket.send(data); //`1${button.dataset.key}`);
 
-            socket.send(`0${btn.dataset.key}`);
+            //socket.send(`0${btn.dataset.key}`);
             btn.classList.remove("btn-active");
             if (timers[btn.dataset.key]) {
                 document.getElementById(`info${btn.dataset.key}`).innerHTML = `canceled for ${btn.dataset.key}`
