--- a/zappyservice/index copy.html
+++ b/zappyservice/index copy.html
@@ -9,11 +9,10 @@
     <!-- You don't want to know what it looked like before.... -->
 
     <style>
-        p {
+        p{
             margin: 0px;
 
         }
-
         body {
             padding: 1em;
             max-width: 600px;
@@ -70,12 +69,18 @@
 
 <body class="col">
     <ul class="l-none buttons row hcenter">
-
+ 
         <li><button class="zap-button nosel" data-type="relay" data-key="1">Relay one</button></li>
         <li><button class="zap-button nosel" data-type="relay" data-key="2">Relay two</button></li>
         <li><button class="zap-button nosel" data-type="relay" data-key="3">Relay three</button></li>
-        <li><button class="zap-button nosel" data-type="relay" data-key="4">Relay four</button></li>
-
+        <li><button class="zap-button nosel" data-type="relay"  data-key="4">Relay four</button></li>
+        <br></br>
+        <li><button class="zap-button nosel" type="channel" data-key="p1">Pair 1</button></li>
+        <li><button class="zap-button nosel" type="channel" data-key="p2">Pair 2</button></li>
+        <li><button class="zap-button nosel" type="subchannel" data-key="p3">Pair 3</button></li>
+        <li><button class="zap-button nosel" type="subchannel" data-key="p4">Pair 4</button></li>
+        <br></br>
+        <li><button class="zap-button nosel" data-key="prog1">Prog 4</button></li>
 
     </ul>
 
@@ -83,9 +88,15 @@
     <p id="info2"></p>
     <p id="info3"></p>
     <p id="info4"></p>
+    
+    <p id="infop1"></p>
+    <p id="infop2"></p>
+    <p id="infop3"></p>
+    <p id="infop4"></p>
 
+    <p id="infoprog1"></p>
 
-
+      
     <p id="debug"></p>
     <p id="event"></p>
 
@@ -157,11 +168,11 @@
         }
 
         function send(button) {
-            //var data = JSON.stringify({ button.dataset.key}); 
-            //console.log(data);
-            //console.log(button.dataset.type)
+            var data = JSON.stringify({ "number": 1, "state": 1, "name": button.dataset.key}); 
+            console.log(data);
+            console.log(button.dataset.type)
 
-            socket.send(`1${button.dataset.key}`);
+            socket.send(data); //`1${button.dataset.key}`);
 
             document.getElementById(`info${button.dataset.key}`).innerHTML =
                 `sent for ${button.dataset.key}`;
@@ -174,7 +185,7 @@
                 }
                 return;
             }
-            var data = JSON.stringify({ "number": 1, "state": 1, "name": btn.dataset.key });
+            var data = JSON.stringify({ "number": 1, "state": 1 , "name": btn.dataset.key}); 
             console.log(data);
             socket.send(data); //`1${button.dataset.key}`);
 
