--- a/zappyservice/index.html
+++ b/zappyservice/index.html
@@ -71,10 +71,10 @@
 <body class="col">
     <ul class="l-none buttons row hcenter">
 
-        <li><button class="zap-button nosel" data-type="relay" data-key="1">Relay one</button></li>
-        <li><button class="zap-button nosel" data-type="relay" data-key="2">Relay two</button></li>
-        <li><button class="zap-button nosel" data-type="relay" data-key="3">Relay three</button></li>
-        <li><button class="zap-button nosel" data-type="relay" data-key="4">Relay four</button></li>
+        <li><button class="zap-button nosel" data-key="1">Relay one</button></li>
+        <li><button class="zap-button nosel" data-key="2">Relay two</button></li>
+        <li><button class="zap-button nosel" data-key="3">Relay three</button></li>
+        <li><button class="zap-button nosel" data-key="4">Relay four</button></li>
 
 
     </ul>
@@ -166,7 +166,6 @@
             document.getElementById(`info${button.dataset.key}`).innerHTML =
                 `sent for ${button.dataset.key}`;
         }
-
         function cancel(btn) {
             if (btn === null) {
                 for (const button of Object.values(buttons)) {
@@ -174,11 +173,8 @@
                 }
                 return;
             }
-            var data = JSON.stringify({ "number": 1, "state": 1, "name": btn.dataset.key });
-            console.log(data);
-            socket.send(data); //`1${button.dataset.key}`);
 
-            //socket.send(`0${btn.dataset.key}`);
+            socket.send(`0${btn.dataset.key}`);
             btn.classList.remove("btn-active");
             if (timers[btn.dataset.key]) {
                 document.getElementById(`info${btn.dataset.key}`).innerHTML = `canceled for ${btn.dataset.key}`
@@ -186,6 +182,25 @@
                 timers[btn.dataset.key] = null;
             }
         }
+        //function cancel(btn) {
+        //    if (btn === null) {
+        //        for (const button of Object.values(buttons)) {
+        //            cancel(button);
+        //        }
+        //        return;
+        //    }
+        //    var data = JSON.stringify({ "number": 1, "state": 1, "name": btn.dataset.key });
+        //    console.log(data);
+        //    socket.send(data); //`1${button.dataset.key}`);
+        //
+        //    //socket.send(`0${btn.dataset.key}`);
+        //    btn.classList.remove("btn-active");
+        //    if (timers[btn.dataset.key]) {
+        //        document.getElementById(`info${btn.dataset.key}`).innerHTML = `canceled for ${btn.dataset.key}`
+        //        clearInterval(timers[btn.dataset.key]);
+        //        timers[btn.dataset.key] = null;
+        //    }
+        //}
 
         document.addEventListener("blur", () => cancel(null));
     </script>
